[tool.poetry]
name = "mch_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aniso8601 = "8.0.0"
click = "7.1.2"
Flask = "1.1.2"
Flask-RESTful = "0.3.8"
Jinja2 = "2.11.2"
Flask-MySQLdb = "0.2.0"
pandas = "1.2.2"
Markdown = "2.6.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
